# data-cooker

./: pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  publish.yml  sonarcloud.yml
data_cooker/: recipe.py
data_cooker/utils/: __init__.py  is_valid_fraction.py
data_cooker/variables/: continous_variable.py  discrete_variable.py  nominal_variable.py  variable.py
tests/functional_tests/: test_auto_regressive_recipe.py  test_linear_regression_models.py  test_logistic_regression_models.py  test_poisson_regression_models.py
tests/unit_tests/: test_recipe.py
tests/unit_tests/utils/: test_is_valid_fraction.py
tests/unit_tests/variables/: test_continous_variable.py  test_error_messages.py  test_nominal_variable.py  test_variable.py
