[tool.poetry]
name = "data-cooker"
version = "0.1.0"
description = "Library for data generation based on model specs (Recipes)"
authors = ["Guilherme <g.lisboa.oliveira@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "data_cooker"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
